assets/scss/components/_navbar.scss
// Corresponds to the number of elements in /data/routes
$navItemsLength: 4;
$navNumOfItemBlocks: 4;

.nav {
  color: white;
  position: fixed;
  top: 0;
  width: 100%;
  transition: height 0.4s cubic-bezier(0.52, 0.16, 0.24, 1);
  z-index: 999;
  background: var(--dark);
  border-bottom: 2px solid #c40729;
  &-body {
    box-shadow: 0 1.5rem 6rem rgba(0, 0, 0, 0.17);
    position: fixed;
    right: 10px;
    z-index: 1;
    top: 100%;
    opacity: 0;
    overflow: hidden;
    transition: top 0.33s linear;
    background: transparent;
    background-color: var(accent);
    width: 16rem;
    padding: 100px 0;
    min-height: 100vh;
    z-index: 1;
  }
  &-menu {
    position: relative;
    padding: 10px 25px 10px 0;
    height: 100%;
    max-width: $page-width;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;

    &-items {
      width: 100%;
      display: flex;
      align-items: center;
      justify-content: space-between;

      &-container {
        display: flex;
        align-items: center;
        justify-content: space-between;
        width: 33vw;
      }
    }

    &-item {
      height: 100%;
    }

    &-dropdowns {
      width: 100%;
      display: flex;
      align-items: center;
      justify-content: space-between;
    }

    a {
      color: inherit;
      display: block;
      padding: 10px 0px;
      padding-right: 0;
      font-size: 100%;
      img {
        width: 250px;
        margin: 0rem;
        margin-top: -0.25rem;
      }
    }
  }
}

.item {
  display: inline;
  height: 30px;
  &:hover {
    cursor: pointer;
  }
}

.arrow {
  animation-name: out;
  animation-duration: 500ms;
  animation-fill-mode: forwards;
  user-select: none;
  text-align: center;
  display: inline-block;
}

.item:hover + .arrow {
  animation-name: in;
  animation-duration: 500ms;
  animation-fill-mode: forwards;
}

@keyframes in {
  from {
    transform: rotateX(0deg);
  }

  to {
    transform: rotateX(180deg);
  }
}

@keyframes out {
  from {
    transform: rotateX(180deg);
  }

  to {
    transform: rotateX(0deg);
  }
}

.actual_content {
  color: white;
  position: fixed;
  display: none;
  justify-content: space-between;
  width: 100%;
  // margin-top: 5rem;
  opacity: 0;
  z-index: 1;

  a {
    margin-top: 0.7rem;
    width: 100%;
  }

  &:hover {
    z-index: 3 !important;
    opacity: 1;
    margin-top: 0px;
  }
}

@for $i from 1 through $navNumOfItemBlocks {
  .item_block#{$i} {
    -webkit-transition: all 500ms ease-out;
    -moz-transition: all 500ms ease-out;
    -o-transition: all 500ms ease-out;
    -ms-transition: all 500ms ease-out;
    transition: all 500ms ease-out;
    display: grid;
    grid-template-columns: 1fr 1fr;
    height: 1px;
    border-color: #921c06;
    border-width: 2px;
    border-style: solid;
    &:hover {
      transform: scale(1.01);
      box-shadow: 0 0 3px #515151;
    }
  }
}

.item_block_container {
  width: 22%;
}

.text_box_container {
  width: 99%;
  text-align: center !important;
  display: flex;
  align-items: baseline !important;
  justify-content: space-evenly !important;

  a {
    text-decoration: none;
    border: 2px solid #921c06;
    width: 15rem;
    padding: 10px 25px;
  }
}

@for $i from 1 through $navNumOfItemBlocks {
  .left_item#{$i} {
    height: 1px;
    z-index: 5;
    border-right: 2px solid #921c06;
  }
}

@for $i from 1 through $navNumOfItemBlocks {
  .right_image#{$i} {
    height: 1px;
    background-repeat: no-repeat;
    background-position: 49%;
    background-size: cover;
  }
}

@keyframes grow {
  from {
    height: 0px;
  }
  to {
    height: 10rem;
  }
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadeout {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

@keyframes shrink {
  from {
    height: 10rem;
  }
  to {
    height: 0px;
  }
}

//Possible arrow?
// .right-pointer{
//   position: fixed;
//   margin: -85px 0px 0px 240px;
//   width: 25px;
//   height: 25px;
//   border-top: 2px solid #9b1d06;
//   border-left: 2px solid #9b1d06;
//   transform: rotate(135deg);
// }
// .right-pointer:after{
//   content: "";
//   display: block;
//   width: 2px;
//   height: 90px;
//   background-color: #9b1d06;
//   transform: rotate(-45deg);
//   margin-top:-47px;

// }

.long_arrow {
  background: #921c06;
  height: 3px;
  width: 60px;
  margin-left: -3px;
  margin-top: calc(6rem + 5px);
  position: relative;

  &:before,
  &:after {
    content: "";
    background: #921c06;
    position: absolute;
    height: 3px;
    width: 15px;
  }

  &:before {
    right: -3px;
    bottom: -4px;
    transform: rotate(-33deg);
  }

  &:after {
    right: -3px;
    top: -4px;
    transform: rotate(33deg);
  }
}

.navbar-container {
  position: sticky;
  top: 0;
  z-index: 1000;
  box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.025), 0 6px 20px 0 rgba(0, 0, 0, 0.04);
}
.navbar {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
  height: calc(60px + 0.7rem);
  color: white;
  background-color: white;
  padding-left: calc(5% + 9px);
  padding-right: calc(5% + 9px);

  a {
    color: inherit;
    text-decoration: none;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

.navbar-logo {
  width: 225px;
}

.navbar-items {
  display: flex;
  align-items: center;
  height: 100%;
}
/*
.navbar-item {
  height: 100%;
  padding: 0 1rem;
  display: flex;
  align-items: center;
}

.navbar-item:hover {
  background: #c40729;
}
*/

#primary_nav_wrap {
  color: black;
  text-transform: uppercase;
  margin-left: auto;
  display: flex;
  justify-content: space-between;

  & > ul {
    list-style: none;
    position: relative;
    color: rgb(0, 0, 0);
    height: 100%;
    margin: 0;

    & > li > a {
      text-decoration: none;
      padding: 0 15px;
    }

    & > li {
      position: relative;
      float: left;
      margin: 0;
      height: 100%;

      display: flex;
      flex-direction: column;
      justify-content: center;

      &:hover {
        background: #c40729;
        color: white;
      }
      &:hover > ul {
        display: block;
      }
    }

    ul {
      display: none;
      position: absolute;
      top: 100%;
      padding: 0;
      list-style: none;

      left: 0;

      li {
        margin: 0;
        width: 200px;
      }

      a {
        display: block;
        line-height: 120%;
        padding: 15px;
        font-size: 1rem;
        background: #dadada;
        color: black;
      }

      a:hover {
        background: white;
        color: black;
      }
    }
  }
}

.mobile-hamburger {
  font-size: 2rem;
}

/* movile nav bar */
.header {
  background: rgb(255, 255, 255);
  box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.025), 0 6px 20px 0 rgba(0, 0, 0, 0.04);
  padding-left: calc(5% + 9px);
  padding-right: calc(5% + 9px);
  position: sticky;
  top: 0;
  z-index: 3;
  color: rgb(0, 0, 0);
  /* padding-top: 0.5rem;
  padding-bottom: 0.5rem; */

  img {
    margin-top: 0.7rem;
    margin-bottom: 0.3rem;
  }

  a {
    color: inherit;
  }
}

.header ul {
  margin: 0;
  padding: 0;
  list-style: none;
  overflow: hidden;
  background: rgb(255, 255, 255);
}

.header li a {
  display: block;
  padding: 20px 20px;
  text-decoration: none;
}

.header li a:hover,
.header .menu-btn:hover {
  background-color: #c40729;
  color: white;
}

.header .logo {
  display: block;
  float: left;
  font-size: 2em;
  padding: 10px 20px;
  text-decoration: none;
}

/* menu */

.header .menu {
  clear: both;
  max-height: 0;
  transition: max-height 0.2s ease-out;
}

/* menu icon */

.header .menu-icon {
  cursor: pointer;
  display: inline-block;
  float: right;
  padding: 28px 20px;
  position: relative;
  user-select: none;
}

.header .menu-icon .navicon {
  background: rgb(0, 0, 0);
  display: block;
  height: 2px;
  position: relative;
  transition: background 0.2s ease-out;
  width: 18px;
}

.header .menu-icon .navicon:before,
.header .menu-icon .navicon:after {
  background: rgb(0, 0, 0);
  content: "";
  display: block;
  height: 100%;
  position: absolute;
  transition: all 0.2s ease-out;
  width: 100%;
}

.header .menu-icon .navicon:before {
  top: 5px;
}

.header .menu-icon .navicon:after {
  top: -5px;
}

/* menu btn */

.header .menu-btn {
  display: none;
}

.header .menu-btn:checked ~ .menu {
  // if adding list items from menu, update below
  max-height: 1400px;
}

.header .menu-btn:checked ~ .menu-icon .navicon {
  background: transparent;
}

.header .menu-btn:checked ~ .menu-icon .navicon:before {
  transform: rotate(-45deg);
}

.header .menu-btn:checked ~ .menu-icon .navicon:after {
  transform: rotate(45deg);
}

.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
  top: 0;
}

@media only screen and (max-width: 1050px) {
  .navbar-items {
    display: none;
  }

  .mobile-hamburger {
    display: block;
  }

  .navbar-container {
    display: none;
  }

  .header {
    display: block;
  }
}

// Mobile dropdown styles
.header details {
  summary {
    display: block;
    padding: 20px 20px;
    cursor: pointer;
    list-style: none;
    text-transform: uppercase;
    text-decoration: none;

    &::-webkit-details-marker {
      display: none;
    }

    &::after {
      content: "▾";
      float: right;
    }
  }

  &[open] summary::after {
    content: "▴";
  }

  &:hover > summary,
  summary:hover {
    background-color: #c40729;
    color: white;
  }
}

.mobile-submenu {
  list-style: none;
  padding: 0;
  margin: 0;
  background: #f0f0f0;

  li a {
    padding: 14px 20px 14px 36px;
    font-size: 0.9rem;

    &:hover {
      background-color: #c40729;
      color: white;
    }
  }
}

@media only screen and (min-width: 1050px) {
  .navbar-items {
    display: flex;
  }

  .mobile-hamburger {
    display: none;
  }

  .navbar-container {
    display: block;
  }

  .header {
    display: none;
  }
}

